Metodos de Medicos ajustados